# Tech_ProjectX

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  Systemdesign.md  launch.bat  launch.ps1  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
_bmad-output/: architecture-open-questions.md  architecture.md  epics-ui.md  epics.md  pii-detection-scope.md  prd-validation-report.md  prd.md  prior-art-landscape.md  ux-design-directions.html  ux-design-specification.md
_bmad-output/case_study_unpacked/docProps/: app.xml  core.xml
_bmad-output/case_study_unpacked/word/: document.xml  numbering.xml  settings.xml  styles.xml
_bmad-output/pitch_unpacked/: [Content_Types].xml
_bmad/core/: config.yaml
config/: scan.yaml
data/: enum_seed.sql  mock_owners.json  onedrive_fixture.json
data/samples/: contact_list.txt  hr_record.txt  invoice_2024.txt  letter.txt  license.txt  onboarding_email.txt  release_notes.txt  tax_form.txt  trip_notes.txt  vendor_contact.txt
engine/: pyproject.toml
engine/app/: audit.py  cli.py  config.py  enums.py  identity.py  main.py  scan_config.py
engine/app/api/: aggregates.py  findings.py  scans.py  tier2.py
engine/app/detectors/: __init__.py  base.py  router.py
engine/app/detectors/image/: _png.py  cascade.py  ml_status.py  ocr.py  pipeline.py  signature.py  warmup.py  yolo.py
engine/app/detectors/text/: __init__.py  extract.py  ner.py  regex_checksum.py
engine/app/detectors/tier2/: llm_text.py  openrouter_client.py  vlm_image.py
engine/app/models/: __init__.py  schema.py
engine/app/repositories/: __init__.py  catalog.py
engine/app/services/: __init__.py  escalation_policy.py  file_content.py  finding_write.py  ownership.py  scan_orchestrator.py  scoring.py
engine/app/sources/: __init__.py  base.py  graph_client.py  local_folder.py  onedrive_graph.py  onedrive_live.py
engine/tests/: conftest.py  office_fixtures.py  test_enum_codes_exhaustive.py  test_enum_generate.py  test_health.py  test_identity.py  test_repositories.py  test_scan_config.py  test_schema_privacy.py
engine/tests/detectors/: test_router.py
engine/tests/detectors/image/: test_image_pipeline.py  test_ml_status.py
engine/tests/detectors/text/: test_extended_detectors.py  test_extract.py  test_ner.py  test_regex_checksum.py
engine/tests/fixtures/: boundary_span.txt  german_ids.txt  german_ner.txt  invalid_luhn_pan.txt  scan.yaml  tiny.txt
engine/tests/integration/: test_api_admin.py  test_api_findings.py  test_api_scans.py  test_e2e_onedrive.py  test_e2e_scan_flow.py  test_full_scan.py
engine/tests/services/: test_delta_scan.py  test_escalation.py  test_finding_write.py  test_ownership.py  test_scan_progress.py  test_scoring.py  test_tier2_isolation.py
engine/tests/sources/: test_local_folder.py  test_onedrive_graph.py
enum/: classification_enum.yaml  generate.py
eval/: calibration.py  collect_findings.py  conftest.py  contracts.py  determinism.py  enum_ref.py  eval_config.py  run_eval.py  test_calibration.py  test_contracts.py  test_corpus_alignment.py  test_corpus_eval.py  test_corpus_large.py  test_corpus_multiformat.py  test_determinism.py  test_labeled_set.py  test_live_eval_seed.py  test_run_eval.py
eval/corpus_large/: __init__.py  generate.py  generate_multiformat.py  labels.jsonl  labels_entity.jsonl  manifest.yaml  manifest_multiformat.yaml  pii_providers.py  renderers.py  templates.py
eval/labeled_set/: __init__.py  labels.jsonl  manifest.yaml
scripts/: check_enum_codes.py  download_yolo_weights.py  export_models_onnx.py  run-backend.bat  run-frontend.bat  run_scan.py  verify_ml_image_scan.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  main.ts  tokens.css
web/src/lib/: api.ts  (+5 more)
(+2466 files in other folders)
