[project]
name = "bosch-gdpr-discovery"
version = "0.1.0"
description = "Automated GDPR Compliance - Bosch Data Discovery (scan engine)"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "Faker>=30.0.0",
    "python-docx>=1.1.0",
    "reportlab>=4.0.0",
    # Torch-free image inference runtime
    "onnxruntime>=1.20.0",
    "rapidocr-onnxruntime>=1.4.0",
    "pillow>=10.0.0",
    # OneDrive / Graph auth (lightweight: no azure-identity, no msgraph-sdk)
    "msal>=1.30.0",
    # Env file loading
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Build-only: used solely by scripts/export_models_onnx.py to produce ONNX weights.
# The serving runtime must NOT import torch / ultralytics / easyocr.
ml-build = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "ultralytics>=8.3.0",
    "onnx>=1.16.0",
]

[tool.pytest.ini_options]
pythonpath = ["eval", "engine"]
testpaths = ["eval", "engine"]
addopts = "-q"
markers = [
    "slow: downloads spaCy models (deselect with -m 'not slow')",
]
