[project]
name = "bosch-gdpr-engine"
version = "0.1.0"
description = "GDPR scan engine (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
    "pypdf>=5.0.0",
    "pillow>=10.0.0",
    # Torch-free image inference runtime
    "onnxruntime>=1.20.0",
    "rapidocr-onnxruntime>=1.4.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
# Build-only: produce ONNX weights via scripts/export_models_onnx.py.
# The serving runtime must NOT import torch / ultralytics / easyocr.
ml-build = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "ultralytics>=8.3.0",
    "onnx>=1.16.0",
]
nlp = [
    "spacy>=3.7.0",
]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = [".", "tests"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
